--- a/app/src/main/res/layout/fragment_apple.xml
+++ b/app/src/main/res/layout/fragment_apple.xml
@@ -9,110 +9,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_margin="20dp"
-        android:orientation="vertical">
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="#f00"
-            android:text="Button 1"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#0f0"
-            android:text="Button 2"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#00f"
-            android:text="Button 3"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#ff0"
-            android:text="Button 4"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#f0f"
-            android:text="Button 5"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#f90"
-            android:text="Button 6"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#f00"
-            android:text="Button 7"
-            android:textColor="#ff9"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#444"
-            android:text="Button 8"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#ff002211"
-            android:text="Button 9"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-        <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="#0f0"
-            android:text="Button 10"
-            android:textColor="#fff"
-            android:textSize="20sp" />
-
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </androidx.core.widget.NestedScrollView>
