--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -3,7 +3,7 @@
     android:id="@+id/cv_song"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="5dp"
+    android:layout_marginBottom="5dp"
     android:layout_marginHorizontal="1dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
