--- a/app/src/main/res/layout/fragment_orange.xml
+++ b/app/src/main/res/layout/fragment_orange.xml
@@ -1,15 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout android:id="@+id/scrollView"
+    android:isScrollContainer="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:layout_gravity="fill_vertical"
+    android:clipToPadding="false"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Orange"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
-
-</RelativeLayout>
+        android:orientation="horizontal"
+        android:background="#D1DEEC"
+        android:paddingHorizontal="10dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_vertical">
+        <Spinner
+            android:id="@+id/regionSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp">
+        </Spinner>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nghe tất cả"
+            android:layout_alignParentRight="true"
+            android:background="@android:color/transparent"
+            android:drawableLeft="@drawable/ic_play_circle_filled_white_24dp" />
+    </RelativeLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
