--- a/app/src/main/res/layout/big_card_view.xml
+++ b/app/src/main/res/layout/big_card_view.xml
@@ -50,7 +50,8 @@
                 android:src="@drawable/ic_more_vert_black_18dp"
                 android:background="@android:color/transparent"
                 android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"/>
+                android:layout_alignParentRight="true"
+                android:padding="5dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
