--- a/app/src/main/res/layout/big_card_view.xml
+++ b/app/src/main/res/layout/big_card_view.xml
@@ -26,11 +26,12 @@
                 android:layout_alignParentLeft="true"/>
 
             <TextView
+                android:id="@+id/cv_big_time"
+                android:paddingHorizontal="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/cv_big_image"
                 android:layout_alignRight="@+id/cv_big_image"
-                android:text="06:12"
                 android:textColor="#ffffff"
                 android:layout_marginBottom="2dp"
                 android:layout_marginRight="2dp"
