--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,13 +88,13 @@
                 android:scrollHorizontally="true"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="#ffffff"
+                android:textColor="@color/textLight"
                 android:textSize="18dp"
                 android:text="Out longgggggggg"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#ffffff"
+                android:textColor="@color/textLight"
                 android:scrollHorizontally="true"
                 android:ellipsize="end"
                 android:maxLines="1"
