--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -47,7 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextView is very longggggggggggggggggggggggggggggggggggggggggggggggggggggg"
-                    android:textColor="#000000"
+                    android:textColor="@color/textDark"
                     android:textSize="17dp"
                     android:scrollHorizontally="true"
                     android:ellipsize="end"
@@ -58,7 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextViwewew"
-                    android:textColor="#000000"
+                    android:textColor="@color/textDark"
                     android:scrollHorizontally="true"
                     android:ellipsize="end"
                     android:maxLines="1"/>
