--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#2a555b</color>
+    <color name="colorPrimaryDark">#2a555b</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="activeMain">#b6cccc</color>
     <color name="tabUnselectedIconColor">#ffffff</color>
+    <color name="textLight">#ffffff</color>
+    <color name="textDark">#000000</color>
 </resources>
