--- a/app/src/main/res/layout/fragment_apple.xml
+++ b/app/src/main/res/layout/fragment_apple.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/scrollView"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/main_swipe_container"
     android:isScrollContainer="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +15,4 @@
         android:id="@+id/recyclerViewSongMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
