--- a/app/src/main/res/layout/fragment_orange.xml
+++ b/app/src/main/res/layout/fragment_orange.xml
@@ -1,4 +1,5 @@
-<LinearLayout android:id="@+id/scrollView"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:id="@+id/rank_swipe_container"
     android:isScrollContainer="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,29 +10,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#D1DEEC"
-        android:paddingHorizontal="10dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center_vertical">
-        <Spinner
-            android:id="@+id/regionSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp">
-        </Spinner>
-        <Button
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="fill_vertical"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nghe tất cả"
-            android:layout_alignParentRight="true"
-            android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/ic_play_circle_filled_white_24dp" />
-    </RelativeLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewSong"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+            android:orientation="horizontal"
+            android:background="#D1DEEC"
+            android:paddingHorizontal="10dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center_vertical">
+            <Spinner
+                android:id="@+id/regionSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp">
+            </Spinner>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nghe tất cả"
+                android:layout_alignParentRight="true"
+                android:background="@android:color/transparent"
+                android:drawableLeft="@drawable/ic_play_circle_filled_white_24dp" />
+        </RelativeLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewSong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
