--- a/app/src/main/res/layout/big_card_view.xml
+++ b/app/src/main/res/layout/big_card_view.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    android:id="@+id/cv_big_song"
+<androidx.cardview.widget.CardView android:id="@+id/cv_big_song"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginHorizontal="1dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    card_view:cardElevation="0dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
