--- a/app/src/main/res/drawable/ic_repeat_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_repeat_black_24dp.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"
-      android:fillColor="#ffffff"/>
+      android:pathData="M7,7h10v3l4,-4 -4,-4v3L5,5v6h2L7,7zM17,17L7,17v-3l-4,4 4,4v-3h12v-6h-2v4z"
+      android:fillColor="#000000"/>
 </vector>
