--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_play_circle_filled_white_24dp"
+            android:src="@drawable/ic_play_circle_filled_orange_40dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -66,13 +66,14 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_skip_next_white_24dp"
+            android:src="@drawable/ic_skip_next_black_24dp"
             android:background="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/playBtn"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <LinearLayout
+            android:id="@+id/song_info_ft"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
