--- a/app/src/main/res/drawable/ic_play_circle_filled_orange_40dp.xml
+++ b/app/src/main/res/drawable/ic_play_circle_filled_orange_40dp.xml
@@ -3,7 +3,7 @@
     android:height="40dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM10,16.5v-9l6,4.5 -6,4.5z"
-      android:fillColor="#FF5722"/>
+    <path
+        android:fillColor="#FF5722"
+        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM10,16.5v-9l6,4.5 -6,4.5z" />
 </vector>
