--- a/app/src/main/res/layout/activity_current_song.xml
+++ b/app/src/main/res/layout/activity_current_song.xml
@@ -7,8 +7,8 @@
     tools:context=".activity.CurrentSongActivity">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar2"
@@ -17,27 +17,28 @@
             android:background="?attr/colorPrimary">
 
             <ImageButton
-                android:layout_width="wrap_content"
                 android:id="@+id/backBtn"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_back_white_24dp"
+                android:layout_marginRight="10dp"
                 android:background="@android:color/transparent"
-                android:layout_marginRight="10dp"/>
+                android:src="@drawable/ic_arrow_back_white_24dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:text="Trình phát"
                 android:textColor="@color/textLight"
-                android:text="Trình phát"/>
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </androidx.appcompat.widget.Toolbar>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabGravity="fill"/>
+            app:tabGravity="fill"
+            app:tabMode="fixed" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -46,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="65dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -54,36 +55,41 @@
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:gravity="center_vertical|center_horizontal">
+
         <ImageButton
-            android:layout_weight="1"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_repeat_black_24dp"
-            android:background="@android:color/transparent"/>
-        <ImageButton
             android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_repeat_black_24dp" />
+
+        <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_skip_previous_black_24dp"
-            android:background="@android:color/transparent"/>
-        <ImageButton
             android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_skip_previous_black_24dp" />
+
+        <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_play_circle_filled_orange_40dp"
-            android:background="@android:color/transparent"/>
-        <ImageButton
             android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_play_circle_filled_orange_40dp" />
+
+        <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_skip_next_black_24dp"
-            android:background="@android:color/transparent"/>
-        <ImageButton
             android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_skip_next_black_24dp" />
+
+        <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_shuffle_black_24dp"
-            android:background="@android:color/transparent"/>
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_shuffle_black_24dp" />
 
     </LinearLayout>
 
