--- a/app/src/main/res/layout/big_card_view.xml
+++ b/app/src/main/res/layout/big_card_view.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:id="@+id/cv_big_song"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_big_song"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="1dp"
-    card_view:cardElevation="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+    android:layout_marginTop="10dp"
+    card_view:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -22,21 +22,21 @@
                 android:id="@+id/cv_big_image"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:src="@drawable/default_image"
+                android:layout_alignParentLeft="true"
                 android:scaleType="centerCrop"
-                android:layout_alignParentLeft="true"/>
+                android:src="@drawable/default_image" />
 
             <TextView
                 android:id="@+id/cv_big_time"
-                android:paddingHorizontal="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/cv_big_image"
                 android:layout_alignRight="@+id/cv_big_image"
-                android:textColor="@color/textLight"
-                android:layout_marginBottom="2dp"
+                android:layout_alignBottom="@+id/cv_big_image"
                 android:layout_marginRight="2dp"
-                android:background="#59626A"/>
+                android:layout_marginBottom="2dp"
+                android:background="#59626A"
+                android:paddingHorizontal="4dp"
+                android:textColor="@color/textLight" />
         </RelativeLayout>
 
 
@@ -49,39 +49,39 @@
                 android:id="@+id/menu_cv_big"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_more_vert_black_18dp"
-                android:background="@android:color/transparent"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:padding="5dp"/>
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
+                android:src="@drawable/ic_more_vert_black_18dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_toLeftOf="@+id/menu_cv_big"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/cv_big_song_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:scrollHorizontally="true"
                     android:text="TextView is very long"
                     android:textColor="@color/textDark"
-                    android:textSize="17dp"
-                    android:scrollHorizontally="true"
-                    android:ellipsize="end"
-                    android:maxLines="2"/>
+                    android:textSize="17dp" />
 
                 <TextView
                     android:id="@+id/cv_big_song_artist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextViwewew"
-                    android:textColor="@color/textDark"
-                    android:scrollHorizontally="true"
                     android:ellipsize="end"
-                    android:maxLines="1"/>
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
+                    android:text="TextViwewew"
+                    android:textColor="@color/textDark" />
             </LinearLayout>
         </RelativeLayout>
 
