--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv_song"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
     android:layout_marginHorizontal="1dp"
-    card_view:cardElevation="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_marginBottom="5dp"
+    card_view:cardElevation="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,10 +16,10 @@
             android:id="@+id/cv_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/default_image"
-            android:scaleType="centerCrop"
+            android:layout_alignParentLeft="true"
             android:layout_marginRight="15dp"
-            android:layout_alignParentLeft="true"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_image" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,44 +30,45 @@
                 android:id="@+id/menu_cv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_more_vert_black_18dp"
-                android:background="@android:color/transparent"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:padding="5dp"/>
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
+                android:src="@drawable/ic_more_vert_black_18dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_toLeftOf="@+id/menu_cv"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/cv_song_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
                     android:text="TextView is very longggggggggggggggggggggggggggggggggggggggggggggggggggggg"
                     android:textColor="@color/textDark"
-                    android:textSize="17dp"
-                    android:scrollHorizontally="true"
-                    android:ellipsize="end"
-                    android:maxLines="1"/>
+                    android:textSize="17dp" />
 
                 <TextView
                     android:id="@+id/cv_song_artist"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextViwewew"
-                    android:textColor="@color/textDark"
-                    android:scrollHorizontally="true"
                     android:ellipsize="end"
-                    android:maxLines="1"/>
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
+                    android:text="TextViwewew"
+                    android:textColor="@color/textDark" />
+
                 <TextView
+                    android:id="@+id/cv_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/cv_time"
-                    android:text="6:02"/>
+                    android:text="6:02" />
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
