--- a/app/src/main/res/layout/pl_card_view.xml
+++ b/app/src/main/res/layout/pl_card_view.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/pl_cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
     android:layout_marginHorizontal="1dp"
-    card_view:cardElevation="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_marginBottom="5dp"
+    card_view:cardElevation="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,10 +16,10 @@
             android:id="@+id/pl_cv_image"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/default_image"
-            android:scaleType="centerCrop"
+            android:layout_alignParentLeft="true"
             android:layout_marginRight="15dp"
-            android:layout_alignParentLeft="true"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_image" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,43 +30,43 @@
                 android:id="@+id/play_pl_cv"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_play_circle_filled_black_24dp"
-                android:background="@android:color/transparent"
-                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:padding="5dp"/>
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:padding="5dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_play_circle_filled_black_24dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:layout_toLeftOf="@+id/play_pl_cv"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/pl_cv_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:scrollHorizontally="true"
                     android:text="TextView is very longggg"
                     android:textColor="@color/textDark"
-                    android:textSize="17dp"
-                    android:scrollHorizontally="true"
-                    android:ellipsize="end"
-                    android:maxLines="1"/>
+                    android:textSize="17dp" />
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/pl_cv_info"
-                    android:textColor="@color/textDark"
-                    android:text="12 songs"/>
-
-                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="12 songs"
+                    android:textColor="@color/textDark" />
+
+                <TextView
                     android:id="@+id/pl_cv_time"
-                    android:text="6:02"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="6:02" />
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
