Rev: fix layout cardview: remove paddingHoz + padding

--- a/app/src/main/res/layout/big_card_view.xml
+++ b/app/src/main/res/layout/big_card_view.xml
@@ -4,7 +4,7 @@
     android:id="@+id/cv_big_song"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     card_view:cardElevation="0dp">
 
     <LinearLayout
