Fix issue: no update ui: (View in playlist, unsub a song in this pl)

--- a/app/src/main/res/menu/option_menu_big_cv.xml
+++ b/app/src/main/res/menu/option_menu_big_cv.xml
@@ -8,5 +8,5 @@
         android:title="Thêm vào hàng đợi" />
     <item
         android:id="@+id/btn_add_to_pl"
-        android:title="Thêm vào danh sách phát" />
+        android:title="Thêm vào playlist" />
 </menu>
